--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="dropdown-item">
                   <ul class="navbar-nav p-3 d-block">
                     <li class="nav-item w-100 item-nav text-center">
-                      <a class="nav-link link-nav ps-1" href="#"
+                      <a class="nav-link link-nav ps-1" href="website-builder.html"
                         >Website Builder</a
                       >
                     </li>
@@ -95,7 +95,7 @@
       </div>
     </section>
 
-    <div
+    <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website"
       class="wa-image-wrapper shadow d-flex justify-content-center align-items-center"
     >
       <img
@@ -103,7 +103,7 @@
         alt="whatsapp-image"
         class="wa-image rounded-circle"
       />
-    </div>
+    </a>
 
     <div class="container-fluid">
       <section class="about py-5 d-flex flex-column">
