finished layouting and responsive in page 2

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
+      <nav
+        class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation"
+      >
         <div class="container-fluid">
-          <a class="navbar-brand w-25 me-0" href="#"
+          <a class="navbar-brand me-0" href="#"
             ><img src="./img/Logo_edited.png" alt="logo-nineod" width="85"
           /></a>
 
@@ -29,8 +31,12 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav">
+
+          <div
+            class="collapse navbar-collapse menu-wrapper"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
               <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
                 <a class="nav-link link-nav active" aria-current="page" href="#"
                   >Home</a
@@ -49,7 +55,9 @@
                 <div class="dropdown-item">
                   <ul class="navbar-nav p-3 d-block">
                     <li class="nav-item w-100 item-nav text-center">
-                      <a class="nav-link link-nav ps-1" href="website-builder.html"
+                      <a
+                        class="nav-link link-nav ps-1"
+                        href="website-builder.html"
                         >Website Builder</a
                       >
                     </li>
@@ -65,6 +73,12 @@
                 <a class="nav-link link-nav" href="#">Contact</a>
               </li>
             </ul>
+          </div>
+          <div class="login opacity-0">
+            <div class="icon-user rounded-circle d-flex me-2">
+              <i class="fa fa-user m-auto text-white" aria-hidden="true"></i>
+            </div>
+            <p class="txt-primary m-0">Masuk</p>
           </div>
         </div>
       </nav>
@@ -95,7 +109,8 @@
       </div>
     </section>
 
-    <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website"
+    <a
+      href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website"
       class="wa-image-wrapper shadow d-flex justify-content-center align-items-center"
     >
       <img
