--- a/website-builder.html
+++ b/website-builder.html
@@ -16,7 +16,7 @@
         class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation"
       >
         <div class="container-fluid">
-          <a class="navbar-brand w-25 me-0" href="#"
+          <a class="navbar-brand me-0" href="#"
             ><img src="./img/Logo_edited.png" alt="logo-nineod" width="85"
           /></a>
 
@@ -31,8 +31,9 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
               <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
                 <a class="nav-link link-nav active" aria-current="page" href="#"
                   >Home</a
@@ -69,6 +70,12 @@
                 <a class="nav-link link-nav" href="#">Contact</a>
               </li>
             </ul>
+          </div>
+          <div class="login opacity-1 d-flex align-items-center">
+            <div class="icon-user rounded-circle d-flex me-2">
+              <i class="fa fa-user m-auto text-white" aria-hidden="true"></i>
+            </div>
+            <p class="txt-primary m-0">Masuk</p>
           </div>
         </div>
       </nav>
@@ -112,23 +119,424 @@
       />
     </a>
 
-    <section class="profesional-blog d-flex position-relative">
+    <section class="profesional-blog d-flex">
+      <div
+        class="profesional-blog-title justify-content-center d-flex flex-column"
+      >
+        <h1>Professional Blog</h1>
+        <p>
+          Buat blog dengan fitur menarik untuk mengembangkan jangkauan Anda dan
+          membangun komunitas.
+        </p>
+      </div>
+      <div
+        class="profesional-blog-img d-flex align-items-center justify-content-center"
+      >
+        <img src="./img/profesional-blog-img.png" alt="profesional-blog-img" />
+      </div>
+    </section>
+
+    <section class="profesional-logo py-5">
+      <div class="container-fluid">
+        <div class="row gy-4">
+          <div class="col-md-6">
+            <img
+              src="./img/profesional-logo-img.jpg"
+              alt="profesional-logo-img"
+              class="img-fluid w-100 h-100 profesional-logo-img"
+            />
+          </div>
+          <div class="col-md-6">
+            <div
+              class="profesional-logo-title h-100 d-flex flex-column justify-content-center"
+            >
+              <h1>Professional Logo</h1>
+              <p>
+                Rancang logo profesional untuk merek atau bisnis Anda, hak
+                komersial penuh & semua format file yang Anda butuhkan.
+              </p>
+              <p>
+                Sekecil apa pun logo Anda, itu memiliki peran yang cukup besar
+                untuk dimainkan. Itu akan terlihat di mana-mana, baik online
+                maupun offline. Selain itu, ini akan berfungsi sebagai tanda
+                referensi visual untuk merek Anda, dan akan mengirimkan pesan
+                perusahaan Anda kepada klien dan calon klien Anda.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="show-creation py-4">
+      <div class="container-fluid">
+        <div class="show-creation-content d-flex">
+          <div
+            class="show-creation-title w-50 d-flex flex-column justify-content-center"
+          >
+            <h1>Pamerkan Karya Anda Sekarang Juga</h1>
+            <p>
+              Anda bisa memamerkan karya yang anda miliki dan bangun kepercayaan
+              pelanggan anda dengan tampilan website yang sesuai dengan
+              keinginan anda.
+            </p>
+          </div>
+          <div class="show-creation-img w-50 mb-4 d-flex justify-content-end">
+            <img
+              src="./img/show-creation-img.webp"
+              alt="show-creation"
+              class="img-fluid w-75"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="make-schedule d-flex flex-column justify-content-center text-center"
+    >
+      <div class="container-fluid">
+        <h3 class="fw-bold mb-3">Kami Disini Untuk Anda</h3>
+        <p class="m-0">Punya Pertanyaan Seputar Website?</p>
+        <p class="mb-4">Buat Jadwal Diskusi Sekarang!</p>
+        <button class="btn-make-schedule">Buat Jadwal</button>
+      </div>
+    </section>
+
+    <section class="ask-questions py-5">
+      <div class="container">
         <div
-          class="profesional-blog-title position-relative d-flex flex-column justify-content-center"
+          class="ask-questions-title d-flex justify-content-between align-items-center"
         >
-          <h1>Professional Blog</h1>
-          <p>
-            Buat blog dengan fitur menarik untuk mengembangkan jangkauan Anda
-            dan membangun komunitas.
-          </p>
+          <div></div>
+          <h3 class="text-uppercase">faq</h3>
+
+          <i class="fas fa-search"></i>
         </div>
-        <div class="profesional-blog-img">
-          <img
-            src="./img/profesional-blog-img.png"
-            alt="profesional-blog-img"
-            class="position-absolute"
-          />
+        <div class="accordion accordion-flush faq-dropdown" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="fw-bold" id="flush-headingOne">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                PEMESANAN
+              </button>
+            </h2>
+            <div
+              id="flush-collapseOne"
+              class="accordion-collapse collapse show"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <span class="fw-semibold"
+                  >BAGAIMANA CARA LENGKAP UNTUK MELAKUKAN PEMESANAN?</span
+                >
+                <ul>
+                  <li>
+                    Masuk ke website
+                    <a href="https://www.nineod.com/service"
+                      >nineod.com/service</a
+                    >
+                  </li>
+                  <li>Pilih Paket sesuai kebutuhan Anda</li>
+                  <li>
+                    Klik "Beli Sekarang", pilih metode pembayaran dan mengisi
+                    data dengan benar, kemudian bayar.
+                  </li>
+                  <li>
+                    Kirim bukti pembayaran untuk mengkonfirmasi pesanan Anda ke
+                    nomer Whatsapp, atau klik
+                    <a
+                      href="https://api.whatsapp.com/send?phone=+628112108020&text=Hallo,%20saya%20ingin%20mengirim%20bukti%20pembayaran%20paket%20website"
+                      target="_blanks"
+                      >Link</a
+                    >
+                    ini
+                  </li>
+                  <li>
+                    Pesanan Anda akan segera diterima dan admin akan melakukan
+                    proses berikutnya.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APA YANG HARUS SAYA LAKUKAN SETELAH MELAKUKAN PEMBAYARAN
+                  ?</span
+                >
+                <ul>
+                  <li>
+                    Melakukan konfirmasi pembayaran melalui admin Whatsapp.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH TERSEDIA PEMBAYARAN BULANAN?</span
+                >
+                <ul>
+                  <li>Untuk saat ini belum tersedia.</li>
+                </ul>
+                <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
+                <ul>
+                  <li>
+                    Kami menyediakan beberapa metode pembayaran seperti, Visa,
+                    Virtual Account Retail Outles dan Ewallets.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH ADA GARANSI UANG KEMBALI?</span
+                >
+                <ul>
+                  <li>
+                    Ada, selama 14 Hari masa percobaan dengan syarat ketentuan
+                    berlaku di Terms And Condition.
+                  </li>
+                </ul>
+                <span class="fw-semibold">APAKAH ADA BIAYA TAMBAHAN?</span>
+                <ul>
+                  <li>
+                    Ya, jika ada tambahan fitur diluar paket yang kami miliki.
+                  </li>
+                </ul>
+                <span class="fw-semibold">APAKAH ADA DISKON ATAU PROMO?</span>
+                <ul>
+                  <li>
+                    Tentu saja, kami akan selalu memberikan diskon atau promo.
+                    Untuk info diskon atau promo kunjungi akun Instagram Kami
+                    <a href="https://www.instagram.com/nineodofficial/"
+                      >Disini</a
+                    >.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo"
+                aria-expanded="false"
+                aria-controls="flush-collapseTwo"
+              >
+                TECHNICAL FLOW
+              </button>
+            </h2>
+            <div
+              id="flush-collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingTwo"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <span class="fw-semibold"
+                  >BERAPA LAMA PENGERJAAN UNTUK WEBSITE E-COMMERCE
+                  TERSEBUT?</span
+                >
+                <ul>
+                  <li>
+                    Untuk waktu pengerjaan kami estimasikan sesuai tingkat
+                    kesulitan website
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >KAPAN LAYANAN WEBSITE E-COMMERCE SAYA AKTIF?</span
+                >
+                <ul>
+                  <li>
+                    Setelah website Anda selesai dikerjakan dan bisa diakses
+                    secara Live
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH SUDAH TERMASUK BIAYA MAINTENANCE?</span
+                >
+                <ul>
+                  <li>
+                    Ya, akan tetapi kami akan membatasi sesuai yang tertera
+                    didalam Paket
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH MEMILIKI ADMIN PANEL ATAU C PANEL?</span
+                >
+                <ul>
+                  <li>
+                    Ya, Kami menyediakan Dashboard/Admin untuk pengolahan data
+                    website Anda.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH SUDAH TERMASUK DENGAN DOMAIN?</span
+                >
+                <ul>
+                  <li>
+                    Ya, semua paket yang tersedia sudah termasuk domain gratis
+                    selama 1 tahun.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >KALO SAYA SUDAH PUNYA DESAIN WEBSITE BAGAIMANA?</span
+                >
+                <ul>
+                  <li>
+                    Tim Kami akan mengimplementasikan sesuai dengan design web
+                    yang Anda punya.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >KALO SAYA SUDAH PUNYA WEBSITE DAN MAU MENGGUNAKAN LAYANAN
+                  WEBSITE NINEOD APAKAH BISA?</span
+                >
+                <ul>
+                  <li>
+                    Tentu saja, tetapi sebelumnya harap konsultasikan terlebih
+                    dahulu perihal website yang sebelumnya.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >BAGAIMANA SAYA DAPAT MEMILIH DESAINNYA?</span
+                >
+                <ul>
+                  <li>
+                    Untuk pemilihan Template/Design Anda dapat melihatnya di
+                    website kami.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH TERSEDIA LAYANAN DESAIN LOGO?</span
+                >
+                <ul>
+                  <li>Ya, kami menyediakan fitur "Logo Maker".</li>
+                </ul>
+                <span class="fw-semibold"
+                  >BAGAIMANA GAMBAR GAMBAR / ASET KONTEN UNTUK DI WEBSITE?</span
+                >
+                <ul>
+                  <li>
+                    Kami sudah menyediakan gratis Asset gambar keperluan website
+                    Anda
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH DIPERBOLEHKAN MELAKUKAN PERUBAHAN MENDADAK ATAU
+                  PENAMBAHAN?</span
+                >
+                <ul>
+                  <li>
+                    Ya, tetapi sebelumnya harap mengkonfirmasikan terlebih
+                    dahulu.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH SAYA DAPAT MELAKUKAN PERUBAHAN ATAU MODIFIKASI
+                  SENDIRI?</span
+                >
+                <ul>
+                  <li>
+                    Tidak bisa, karena sudah layanan ticket untuk perubahan atau
+                    modifikasi web. Jika memodifikasi sendiri di khawatirkan
+                    akan menimbulkan error yang tidak diinginkan.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >APAKAH SAYA BOLEH MENAMBAHKAN PLUGIN?</span
+                >
+                <ul>
+                  <li>Ya, selaman plugin itu aman.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree"
+                aria-expanded="false"
+                aria-controls="flush-collapseThree"
+              >
+                GENERAL INFORMATION
+              </button>
+            </h2>
+            <div
+              id="flush-collapseThree"
+              class="accordion-collapse collapse "
+              aria-labelledby="flush-headingThree"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <span class="fw-semibold"
+                  >BERAPA HARGA UNTUK SETIAP PAKET?</span
+                >
+                <ul>
+                  <li>
+                    Untuk detail harga paket silahkan kunjungi website kami.
+                  </li>
+                </ul>
+                <span class="fw-semibold"
+                  >‌APA KELEBIHAN FITUR DARI SETIAP PAKET?</span
+                >
+                <ul>
+                  <li>
+                    Untuk Paket website unlimited tidak mencakup Fitur,
+                    Profesional Logo, Sosial Media Logo, Files, dan Tiket Design
+                    Pages. Untuk paket VIP sudah mencakup semua yang tidak ada
+                    di paket Unlimited untuk detail kelebihan fitur dari setiap
+                    fitur, Anda bisa mengunjungi Link <a href="#">Disini</a>
+                  </li>
+                </ul>
+                <span class="fw-semibold">‌‌‌APAKAH WEBSITENYA AMAN?</span>
+                <ul>
+                  <li>
+                    Ya, karena website yang dibuat oleh kami sudah dilengkapi
+                    dengan sertifikat SSL.
+                  </li>
+                </ul>
+                <span class="fw-semibold">‌‌‌APAKAH ITU SSL?</span>
+                <ul>
+                  <li>
+                    Sertifikat SSL atau lebih dikenal dengan SSL adalah
+                    singkatan dari Secure Socket Layer. Apabila sistem keamanan
+                    ini ditambahkan pada website Anda, maka url website akan
+                    berubah menjadi HTTPS. Tujuan utama pemasangan SSL adalah
+                    sebagai pengaman pertukaran data yang terjadi melalui
+                    jaringan internet.
+                  </li>
+                </ul>
+                <span class="fw-semibold">‌‌‌BERAPA HARGA MAINTENANCE?</span>
+                <ul>
+                  <li>
+                    Harga maintenance sudah termasuk dalam paket yang dipilih.
+                  </li>
+                </ul>
+                <span class="fw-semibold">‌‌‌‌APA ITU WEBSITE ?</span>
+                <ul>
+                  <li>
+                    Sebuah Kumpulan Halaman pada suatu domain di internet yang
+                    dibuat dengan tujuan tertentu dan saling berhubungan serta
+                    dapat diakses secara luas melalui Halaman Depan (Home Page)
+                    menggunakan sebuah browser menggunakan URL Website.
+                  </li>
+                </ul>
+                <span class="fw-semibold">‌‌‌‌APAKAH SULIT PROSES PENGGUNAAN LAYANAN NINEOD?</span>
+                <ul>
+                  <li>
+                   Tentu tidak, karena kami memliki tim yang kompeten.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <footer>
