adding login and register page

--- a/register-page.html
+++ b/register-page.html
@@ -17,14 +17,14 @@
             <div class="d-flex justify-content-center align-items-center flex-column py-5">
                 <div class="login-page-body">
                     <a href="#" class="fs-3 text-white link-close"><i class="fas fa-times"></i></a>
-                    <h1 class="fw-bold">Masuk</h1>
-                    <p>Baru mengenal situs ini? <a href="register-page.html" class="register-link">Daftar</a></p>
+                    <h1 class="fw-bold">Daftar</h1>
+                    <p>Sudah menjadi anggota? <a href="login-page.html" class="register-link">Masuk</a></p>
                     <div class="d-flex flex-column ">
-                        <button class="btn-facebook mb-3 py-2 px-3 text-white"><i class="fab fa-facebook-square fs-3 float-start"></i> Log In With facebook</button>
-                        <button class="btn-google py-2 px-3 bg-primary text-white"><img src="./assets/img/google-logo.png" alt="google-logo" width="23" class="float-start"> Log In With Google</button>
+                        <button class="btn-facebook mb-3 py-2 px-3 text-white"><i class="fab fa-facebook-square fs-3 float-start"></i> Sign Up With facebook</button>
+                        <button class="btn-google py-2 px-3 bg-primary text-white"><img src="./assets/img/google-logo.png" alt="google-logo" width="23" class="float-start"> Sign Up With Google</button>
                     </div>
                     <p class="atau my-4"><span>atau</span></p>
-                    <button class="w-100 btn-email py-2 px-3 text-white">Login dengan Email</button>
+                    <button class="w-100 btn-email py-2 px-3 text-white">Mendaftar dengan Email</button>
                 </div>
             </div>
         </div>
