adding class for login and register page

--- a/register-page.html
+++ b/register-page.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <div class="login-page text-center text-white py-5">
+    <div class="register-page text-center text-white py-5">
         <div class="container-fluid">
             <div class="d-flex justify-content-center align-items-center flex-column py-5">
-                <div class="login-page-body">
+                <div class="register-page-body">
                     <a href="#" class="fs-3 text-white link-close"><i class="fas fa-times"></i></a>
                     <h1 class="fw-bold">Daftar</h1>
-                    <p>Sudah menjadi anggota? <a href="login-page.html" class="register-link">Masuk</a></p>
+                    <p>Sudah menjadi anggota? <a href="login-page.html" class="login-link">Masuk</a></p>
                     <div class="d-flex flex-column ">
                         <button class="btn-facebook mb-3 py-2 px-3 text-white"><i class="fab fa-facebook-square fs-3 float-start"></i> Sign Up With facebook</button>
                         <button class="btn-google py-2 px-3 bg-primary text-white"><img src="./assets/img/google-logo.png" alt="google-logo" width="23" class="float-start"> Sign Up With Google</button>
