--- a/website-builder.html
+++ b/website-builder.html
@@ -53,7 +53,7 @@
           <div class="icon-user rounded-circle d-flex me-2">
             <i class="fa fa-user m-auto text-white" aria-hidden="true"></i>
           </div>
-          <p class="txt-primary m-0">Masuk</p>
+          <a href="login-page.html" class="txt-primary m-0">Masuk</a>
         </div>
       </div>
     </nav>
@@ -190,8 +190,7 @@
                   Melakukan konfirmasi pembayaran melalui admin Whatsapp.
                 </li>
               </ul>
-              <span class="fw-semibold">APAKAH TERSEDIA PEMBAYARAN BULANAN?</span>
-              <ul>
+              <span clogin-page
                 <li>Untuk saat ini belum tersedia.</li>
               </ul>
               <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
