adding link in every page

--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@ href="./img/favicon.ico" /> -->
         </p>
         <p class="fw-light text-center m-0">
           <a href="#" class="text-decoration-none">Proudly created</a>
-          with <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
+          with
+          <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
           <a href="https://www.nineod.com/" class="text-decoration-none">nineod</a>
         </p>
         <div class="media-social-icon d-flex justify-content-end">
