--- a/login-page.html
+++ b/login-page.html
@@ -24,7 +24,9 @@
                         <button class="btn-google py-2 px-3 bg-primary text-white"><img src="./assets/img/google-logo.png" alt="google-logo" width="23" class="float-start"> Log In With Google</button>
                     </div>
                     <p class="atau my-4"><span>atau</span></p>
-                    <button class="w-100 btn-email py-2 px-3 text-white">Login dengan Email</button>
+                    <form action="login-email.html">
+                        <button class="w-100 btn-email py-2 px-3 text-white" type="submit">Login dengan Email</button>
+                    </form>
                 </div>
             </div>
         </div>
