--- a/platform-builder.html
+++ b/platform-builder.html
@@ -53,7 +53,7 @@
           <div class="icon-user rounded-circle d-flex me-2">
             <i class="fa fa-user m-auto text-white" aria-hidden="true"></i>
           </div>
-          <p class="txt-primary m-0">Masuk</p>
+          <a href="register-page.html" class="txt-primary m-0">Masuk</a>
         </div>
       </div>
     </nav>
