--- a/website-builder.html
+++ b/website-builder.html
@@ -53,7 +53,7 @@
           <div class="icon-user rounded-circle d-flex me-2">
             <i class="fa fa-user m-auto text-white" aria-hidden="true"></i>
           </div>
-          <a href="login-page.html" class="txt-primary m-0">Masuk</a>
+          <a href="register-page.html" class="txt-primary m-0">Masuk</a>
         </div>
       </div>
     </nav>
@@ -190,37 +190,36 @@
                   Melakukan konfirmasi pembayaran melalui admin Whatsapp.
                 </li>
               </ul>
-              <span clogin-page
-                <li>Untuk saat ini belum tersedia.</li>
-              </ul>
-              <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
-              <ul>
-                <li>
-                  Kami menyediakan beberapa metode pembayaran seperti, Visa,
-                  Virtual Account Retail Outles dan Ewallets.
-                </li>
-              </ul>
-              <span class="fw-semibold">APAKAH ADA GARANSI UANG KEMBALI?</span>
-              <ul>
-                <li>
-                  Ada, selama 14 Hari masa percobaan dengan syarat ketentuan
-                  berlaku di Terms And Condition.
-                </li>
-              </ul>
-              <span class="fw-semibold">APAKAH ADA BIAYA TAMBAHAN?</span>
-              <ul>
-                <li>
-                  Ya, jika ada tambahan fitur diluar paket yang kami miliki.
-                </li>
-              </ul>
-              <span class="fw-semibold">APAKAH ADA DISKON ATAU PROMO?</span>
-              <ul>
-                <li>
-                  Tentu saja, kami akan selalu memberikan diskon atau promo.
-                  Untuk info diskon atau promo kunjungi akun Instagram Kami
-                  <a href="https://www.instagram.com/nineodofficial/">Disini</a>.
-                </li>
-              </ul>
+              <span clogin-page <li>Untuk saat ini belum tersedia.</li>
+                </ul>
+                <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
+                <ul>
+                  <li>
+                    Kami menyediakan beberapa metode pembayaran seperti, Visa,
+                    Virtual Account Retail Outles dan Ewallets.
+                  </li>
+                </ul>
+                <span class="fw-semibold">APAKAH ADA GARANSI UANG KEMBALI?</span>
+                <ul>
+                  <li>
+                    Ada, selama 14 Hari masa percobaan dengan syarat ketentuan
+                    berlaku di Terms And Condition.
+                  </li>
+                </ul>
+                <span class="fw-semibold">APAKAH ADA BIAYA TAMBAHAN?</span>
+                <ul>
+                  <li>
+                    Ya, jika ada tambahan fitur diluar paket yang kami miliki.
+                  </li>
+                </ul>
+                <span class="fw-semibold">APAKAH ADA DISKON ATAU PROMO?</span>
+                <ul>
+                  <li>
+                    Tentu saja, kami akan selalu memberikan diskon atau promo.
+                    Untuk info diskon atau promo kunjungi akun Instagram Kami
+                    <a href="https://www.instagram.com/nineodofficial/">Disini</a>.
+                  </li>
+                </ul>
             </div>
           </div>
         </div>
