--- a/register-page.html
+++ b/register-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Login | Nineod</title>
+    <title>Register | Nineod</title>
 </head>
 
 <body>
