adding height 100vh in content

--- a/login-page.html
+++ b/login-page.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="login-page text-center text-white py-5">
+    <div class="login-page text-center text-white">
         <div class="container-fluid">
-            <div class="d-flex justify-content-center align-items-center flex-column py-5">
+            <div class="d-flex justify-content-center align-items-center flex-column vh-100">
                 <div class="login-page-body">
                     <a href="#" class="fs-3 text-white link-close"><i class="fas fa-times"></i></a>
                     <h1 class="fw-bold">Masuk</h1>
