--- a/register-email.html
+++ b/register-email.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Login With Email | Nineod</title>
+    <title>Register With Email | Nineod</title>
 </head>
 
 <body>
-    <div class="login-email text-white">
+    <div class="register-email text-white">
         <div class="container-fluid">
             <div class="d-flex justify-content-center align-items-center flex-column vh-100">
-                <div class="login-email-body">
+                <div class="register-email-body">
                     <a href="#" class="fs-3 text-white link-close"><i class="fas fa-times"></i></a>
                     <div class="text-center">
-                        <h1 class="fw-bold">Masuk</h1>
-                        <p>Baru mengenal situs ini? <a href="register-page.html" class="register-link">Daftar</a></p>
+                        <h1 class="fw-bold">Daftar</h1>
+                        <p>Sudah menjadi anggota? <a href="login-page.html" class="login-link">Masuk</a></p>
                     </div>
                     <form action="" class="form-login">
                         <div class="form-group mb-3">
@@ -30,8 +30,8 @@
                             <label for="password">Password</label>
                             <input type="password" class="w-100 bg-transparent password-input">
                         </div>
-                        <a href="forgot-password.html" class="forgot-password-link w-100 mb-2 text-decoration-underline text-white">Lupa Kata Sandi?</a>
-                        <button class="w-100 btn-submit-form mt-3" type="submit">Masuk</button>
+                        <a href="" class="forgot-password-link w-100 mb-2 text-decoration-underline text-white">Lupa Kata Sandi?</a>
+                        <button class="w-100 btn-submit-form mt-3" type="submit">Daftar</button>
                     </form>
                     <p class="atau my-4"><span>atau</span></p>
                     <div class="text-center">
