--- a/register-page.html
+++ b/register-page.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="register-page text-center text-white py-5">
+    <div class="register-page text-center text-white">
         <div class="container-fluid">
-            <div class="d-flex justify-content-center align-items-center flex-column py-5">
+            <div class="d-flex justify-content-center align-items-center flex-column vh-100">
                 <div class="register-page-body">
                     <a href="#" class="fs-3 text-white link-close"><i class="fas fa-times"></i></a>
                     <h1 class="fw-bold">Daftar</h1>
@@ -24,7 +24,9 @@
                         <button class="btn-google py-2 px-3 bg-primary text-white"><img src="./assets/img/google-logo.png" alt="google-logo" width="23" class="float-start"> Sign Up With Google</button>
                     </div>
                     <p class="atau my-4"><span>atau</span></p>
-                    <button class="w-100 btn-email py-2 px-3 text-white">Mendaftar dengan Email</button>
+                    <form action="register-email.html">
+                        <button class="w-100 btn-email py-2 px-3 text-white" type="submit">Mendaftar dengan Email</button>
+                    </form>
                 </div>
             </div>
         </div>
