--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/aos/aos.css">
   <!-- <link rel="icon" type="image/x-icon"
 href="./img/favicon.ico" /> -->
   <title>Nineod | Profesional Website Builder</title>
@@ -507,6 +508,7 @@ href="./img/favicon.ico" /> -->
   </footer>
   <script src="./assets/js/jquery.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
+  <script src="./assets/js/aos/customAos.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/custom.js"></script>
 </body>
