change title in section service page

--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="position-relative">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
             <div class="container-fluid">
                 <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
@@ -73,13 +73,18 @@
     <section class="services-home">
         <div class="background-dark-thin">
             <div class="container-fluid">
-                <div class="services-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
-                    <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
-                        kembangkan bisnis anda secara online
+                <div class="services-home-bo`dy d-flex flex-column justify-content-center text-center align-items-center text-white">
+                    <h1 class="text-capitalize  fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
+                        punya bisnis?
                     </h1>
+                    <h1 class="text-capitalize mt-0 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
+                        belum punya website?
+                    </h1>
+                    <p class="mb-0 fs-5 fw-light" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
+                        Kini bisnis apapun bisa dimulai secara online.
+                    </p>
                     <p class="mb-4 fs-5 fw-light" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
-                        Kembangkan Bisnis Online Anda dengan menggunakan layanan Platform
-                        Builder kami
+                        Dan tingkatkan kepercayaan pelanggan anda dengan miliki website bisnis mu sendiri
                     </p>
                     <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000">
                         Buat Sekarang
