--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
-                        <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
+                        <li class="nav-item item-nav">
                             <a class="nav-link link-nav" aria-current="page" href="/#home">Home</a>
                         </li>
                         <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav fw-normal">
@@ -243,10 +243,10 @@
         </div>
     </footer>
     <script src="./assets/js/jquery.js"></script>
-    <script src="./assets/js/custom.js"></script>
     <script src="./assets/js/aos/aos.js"></script>
     <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="./assets/js/aos/customAos.js"></script>
+    <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
